# PropertyBinding

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Calc.hpp  Functor.hpp  Item.h  Property.hpp  PropertyData.hpp
test/: CMakeLists.txt  test_Property.cpp
